# docx_character_converter

./: .gitignore  README.md
cpp/: CMakeLists.txt  Config.h  DocxXML.h  SimpZip.h  Utf8Obj.h  Utils.cpp  Utils.h  XMLSimpParser.h  common.h  debug.h  docx_char_cnv.cpp  docx_char_cnv.h  test.cpp
py/: docx_char_cnv.py  opencc_mod.py
py-steps/: ProcessFile.py
sample/: rules.txt  t2s-customized-sample.json  t2s-customized-sample2.json
